[JAVA-4584] Enabled core-java-12 module